# FurnitureMarket

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/backend/: settings.py  urls.py
backend/search/: admin.py  models.py  urls.py  views.py
backend/search/migrations/: 0001_initial.py
frontend/: index.html  locations.html
